# soksak-sidecar-terminal-vt100 — terminal-domain sidecar (vt100 VT engine).
# An engine unit for the contract soksak-spec-sidecar-terminal@1 (canonical text in
# the soksak-contract-terminal repo's SPEC.md). The core does not link this
# crate: it consumes the daemon's documented wire (soksak-pty-proto framing,
# reimplemented here) and serves terminal plugins over a rendezvous socket. The
# engine name lives in this unit's name only; the contract is engine-neutral.
[package]
name = "soksak-sidecar-terminal-vt100"
version = "0.0.1"
edition = "2021"
publish = false
description = "Terminal-domain restore sidecar on the vt100 VT engine: mirrors PTY session output into screen state (scrollback, alt-screen, private modes), serializes it into replayable paint for warm/cold restore, and checkpoints sealed plaintext through the core PTY daemon."

[lib]
name = "soksak_sidecar_terminal_vt100"
path = "src/lib.rs"

# The survival service — subscribes to the daemon tees, checkpoints the mirrors, and
# serves restore over the identity-home rendezvous socket. resolve_sidecar_cmd stages
# dist/soksak-sidecar-terminal-vt100 (stage.sh).
[[bin]]
name = "soksak-sidecar-terminal-vt100"
path = "src/main.rs"

[dependencies]
# Restore engine — the vt100 VT model (parser + grid + scrollback + modes), the sole
# engine seat behind the engine module. vt100 never writes a reply to the PTY, so
# query suppression is inherent; swallowed queries are counted through its Callbacks
# trait (unhandled_csi/unhandled_osc/unhandled_escape). MIT, © Jesse Luehrs; the
# attribution ships in THIRD-PARTY-NOTICES.
#
# Path dependency on a local fork that adds DEC Special Graphics (line-drawing)
# charset support, which crates.io 0.16.2 lacks. Revert to a `vt100 = "<version>"`
# crates.io pin once that support lands upstream.
vt100 = { git = "https://github.com/soksak-ai/vt100-rust.git", rev = "01778784e11f9e073d24559c792546ba40ac20ad" }
# Wire — the daemon speaks NDJSON + base64 payloads; this unit reimplements the
# documented shape (proto module) rather than linking the core crate.
serde_json = "1"
base64 = "0.22"
# Redirect the survival service's own stderr to a home log (dup2) — the plugin spawns
# it over a stdio Channel that drops stderr, so checkpoint failures would be invisible.
# Unix-only survival service; the daemon logs the same way.
libc = "0.2"

[dev-dependencies]
# The contract and its acceptance suite: the corpus, the declared goldens, and the assertions.
# It has no engine of its own — the standard is the declared screen state, not what any
# implementation does. Dev-only: nothing from it ships.
soksak-contract-terminal = { git = "https://github.com/soksak-ai/soksak-contract-terminal.git", rev = "f2713250487fd6461e3e742bc27cde25dbabb548" }

# Independent workspace — separate from the core (src-tauri) workspace (a member must
# live under its workspace root, so a sibling directory cannot join core's).
[workspace]
